# pyorbbecsdk

./: .gitignore  CMakeLists.txt  build_extensions.py  pyproject.toml  setup.cfg
docs/: README_CN.md  README_EN.md
examples/: color_viewer.py  depth_color_sync_align_viewer.py  depth_viewer.py  depth_viewer_callback.py  depth_work_mode.py  double_infrared_viewer.py  hello_orbbec.py  hot_plug.py  imu_data_saver.py  imu_reader.py  infrared_viewer.py  multi_device.py  net_device.py  playback.py  recorder.py  save_image_to_disk.py  save_pointcloud_by_o3d.py  save_pointcloud_to_disk.py  save_pointcloud_to_disk2.py  two_devices_sync.py  utils.py
stubs/: original_pyorbbecsdk.pyi
test/: test_context.py  test_device.py  test_pipeline.py  test_sensor_control.py
